# squatch

./: .gitignore  CAN_TEST_SETUP.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README_IMU_MOCK.md  config.env  diagram.json  gnss_simulator.ino  kconfigs.in  kconfigs_projbuild.in  wokwi.toml
.cache/clangd/index/: i2c.h.57CF23456831C69F.idx  imu.h.DD86518D1888B5C0.idx  main.cpp.E24A3542D6D51D83.idx  registers.h.8BBB4AB863059BC2.idx
.claude/: settings.json
.claude/state/: current_task.json
.github/workflows/: build.yml
.serena/: project.yml
.serena/cache/cpp/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_structure.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
brain/: Dockerfile  README.md  docker-compose.yml
brain/ros2_ws/src/squatch_nodes/: CMakeLists.txt  package.xml
brain/ros2_ws/src/squatch_nodes/include/squatch_nodes/: esp_bridge.hpp
brain/ros2_ws/src/squatch_nodes/launch/: squatch.launch.py
brain/ros2_ws/src/squatch_nodes/src/: esp_bridge_main.cpp  esp_bridge_node.cpp
brain/scripts/: dev.sh
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
locale/: README.md
locale/main/: CMakeLists.txt  main.cpp  tasks.cpp  tasks.h
locale/main/gnss/: gnss.cpp  gnss.h  mock_scenarios.h  nmea.h
locale/main/imu/: mock.cpp  mock_scenarios.h  registers.h
locale/main/lib/: uart.cpp
locale/main/logging/: models.h  structured_logger.h
main/: CMakeLists.txt  i2c.h  main.c  main.cpp
main/gnss/: gnss.cpp  gnss.h  mock_scenarios.h  nmea.cpp  uart.cpp  uart.h  uart_mock.cpp  uart_mock.h
main/imu/: i2c.h  imu.h  mock.h  registers.h
main/logging/: models.h  sensor_logger.cpp  sensor_logger.h
main/mpu6050/: i2c.h  imu.h  registers.h
scripts/: build.sh  dev.sh  qemu-ros2.sh
sessions/: sessions-config.json
sessions/tasks/: m-implement-neo-m8n-gnss.md  m-implement-ros-sensor-integration.md
wokwi-custom-parts/neo-m8n/: neo-m8n.chip.c  neo-m8n.chip.json  neo-m8n.json
